<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/form_background"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="280dp"
            android:text="@string/register_page_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="103dp"
            android:layout_height="113dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor">


            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/register_username_label"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:labelFor="@id/editTextUsername"/>

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/input_background"
                android:ems="12"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/register_username_input"
                android:textColorHint="@color/gray"
                android:textSize="18sp"
                android:autofillHints="username"/>

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/register_email_label"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:labelFor="@id/editTextEmail"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/input_background"
                android:ems="12"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:hint="@string/register_email_input"
                android:textColorHint="@color/gray"
                android:textSize="18sp"
                android:autofillHints="emailAddress"/>

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/register_password_label"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:labelFor="@id/editTextPassword"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/input_background"
                android:ems="12"
                android:inputType="textPassword"
                android:padding="10dp"
                android:hint="@string/register_password_input"
                android:textColorHint="@color/gray"
                android:textSize="18sp"
                android:autofillHints="password"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/purple_primary"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/welcome_button_register"
                android:textSize="22sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>